--- a/config.yaml
+++ b/config.yaml
@@ -13,14 +13,14 @@ singleuser:
   # limits and guarantees
   memory:
     limit: 512G
-    guarantee: 32G
+    guarantee: 8G
   cpu:
     limit: 128
-    guarantee: 16
+    guarantee: 2
   # Defines the default image
   image:
     name: brineylab/jupyterhub-datascience
-    tag: v0.0.7
+    tag: v0.1.3
   profileList:
     - display_name: "data science"
       description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia"
@@ -35,9 +35,9 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning"
-      description: "extends the data science environment to include GPU-enabled torch and transformers libraries, as well as some deep learning-specific JuypyterLab extensions"
+      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JuypyterLab extensions"
       kubespawner_override:
-        image: brineylab/jupyterhub-deeplearning:v0.0.7
+        image: brineylab/jupyterhub-deeplearning:v0.1.3
         extra_resource_limits:
           nvidia.com/gpu: "1"
         lifecycle_hooks:
@@ -56,17 +56,19 @@ singleuser:
     # this defines the default capacity of the PVC for each notebook server
     # capacity: 50Gi
     extraVolumes:
-      - name: nfs-stringer-novaseq6k
+      - name: nfs-avon-novaseq6k
         persistentVolumeClaim:
-          claimName: nfs-stringer-novaseq6k
-      - name: nfs-stringer-nextseq2k
+          claimName: nfs-avon-novaseq6k
+      - name: nfs-avon-nextseq2k
         persistentVolumeClaim:
-          claimName: nfs-stringer-nextseq2k
+          claimName: nfs-avon-nextseq2k
     extraVolumeMounts:
-      - name: nfs-stringer-novaseq6k
+      - name: nfs-avon-novaseq6k
         mountPath: /home/jovyan/sequencing_runs/novaseq
-      - name: nfs-stringer-nextseq2k
+      - name: nfs-avon-nextseq2k
         mountPath: /home/jovyan/sequencing_runs/nextseq
+      - name: nfs-stringer-shared
+        mountPath: /home/jovyan/shared
   extraEnv:
     GRANT_SUDO: "yes"
   uid: 0
@@ -83,7 +85,7 @@ hub:
         - terrence
         - sarah
         - alina
-        - jing
+        - benjamin
       admin_access: true
     JupyterHub:
       authenticator_class: "nativeauthenticator.NativeAuthenticator"
