remove marlo as default storageClass

--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ singleuser:
   storage:
     # this defines the storageclass used for dynamic notebook PVCs
     # dynamic:
-    storageClass: nfs-marlo-ssd
+    # storageClass: nfs-marlo-ssd
 
     # this defines the default capacity of the PVC for each notebook server
     # capacity: 50Gi
