update storage to use NFS CSI driver

--- a/storage/claims/stringer-shared-pvc.yaml
+++ b/storage/claims/stringer-shared-pvc.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: jupyterhub
 spec:
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteMany
   storageClassName: nfs-stringer-hdd
   volumeName: nfs-stringer-shared
   resources:
     requests:
-      storage: 100Ti
+      storage: 200Ti
