--- a/storage/storage_classes/avon-sc.yaml
+++ b/storage/storage_classes/avon-sc.yaml
@@ -1,10 +1,25 @@
+# avon-sc.yaml
+---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: nfs-avon-hdd
-parameters:
-  archiveOnDelete: "true"
-provisioner: cluster.local/nfs-subdir-external-provisioner
+provisioner: nfs.csi.k8s.io
+# parameters:
+#   server: avon.scripps.edu
+#   share: /nfs_share
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
-allowVolumeExpansion: true
+mountOptions:
+  - hard
+  - nfsvers=4.1
+# apiVersion: storage.k8s.io/v1
+# kind: StorageClass
+# metadata:
+#   name: nfs-avon-hdd
+# parameters:
+#   archiveOnDelete: "true"
+# provisioner: cluster.local/nfs-subdir-external-provisioner
+# reclaimPolicy: Delete
+# volumeBindingMode: Immediate
+# allowVolumeExpansion: true
