switch accessModes to RWX

--- a/storage/volumes/stringer-shared-pv.yaml
+++ b/storage/volumes/stringer-shared-pv.yaml
@@ -6,7 +6,7 @@ spec:
   capacity:
     storage: 200Ti
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteMany
   storageClassName: nfs-stringer-hdd
   nfs:
     server: stringer.scripps.edu
