--- a/storage/storage_classes/marlo-sc.yaml
+++ b/storage/storage_classes/marlo-sc.yaml
@@ -4,6 +4,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: nfs-marlo-ssd
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: nfs.csi.k8s.io
 parameters:
   server: marlo.scripps.edu
