--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,15 @@
 # Available chart versions: https://jupyterhub.github.io/helm-chart/
 #
 
+# disable user and server culling
+cull:
+  enabled: false
+
 singleuser:
+  # networking
+  # for some reason, notebook server spawning fails if networkPolicy is set to true
+  networkPolicy:
+    enabled: false
   # limits and guarantees
   memory:
     limit: 512G
@@ -17,10 +25,11 @@ singleuser:
   cpu:
     limit: 128
     guarantee: 1
-  # Defines the default image
+  # default image
   image:
     name: brineylab/jupyterhub-datascience
     tag: v0.1.4
+  # alternate profiles (images)
   profileList:
     - display_name: "data science"
       description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia"
@@ -38,8 +47,8 @@ singleuser:
       description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JuypyterLab extensions"
       kubespawner_override:
         image: brineylab/jupyterhub-deeplearning:v0.1.4
-        extra_resource_limits:
-          nvidia.com/gpu: "1"
+        # extra_resource_limits:
+        #   nvidia.com/gpu: "1"
         lifecycle_hooks:
           postStart:
             exec:
@@ -48,12 +57,14 @@ singleuser:
                 - "-c"
                 - >
                   mkdir -p ${HOME}/codeserver;
+  # storage
   storage:
     dynamic:
       storageClass: nfs-marlo-ssd
+    capacity:
+      250Gi
       # storageClass: nfs-wallace-ssd
     # capacity: 50Gi
-    capacity: 2000Gi
 
     extraVolumes:
       # sequencing data: NovaSeq
@@ -65,22 +76,30 @@ singleuser:
         persistentVolumeClaim:
           claimName: nfs-avon-nextseq2k
       # shared data
-      - name: nfs-stringer-shared
+      - name: nfs-propjoe-shared
         persistentVolumeClaim:
-          claimName: nfs-stringer-shared
+          claimName: nfs-propjoe-shared
+      # - name: nfs-stringer-shared
+      #   persistentVolumeClaim:
+      #     claimName: nfs-stringer-shared
     extraVolumeMounts:
       - name: nfs-avon-novaseq6k
         mountPath: /home/jovyan/sequencing_runs/novaseq
       - name: nfs-avon-nextseq2k
         mountPath: /home/jovyan/sequencing_runs/nextseq
-      - name: nfs-stringer-shared
+      - name: nfs-propjoe-shared
         mountPath: /home/jovyan/shared
+      # - name: nfs-stringer-shared
+      #   mountPath: /home/jovyan/shared
   extraEnv:
     GRANT_SUDO: "yes"
   uid: 0
   fsGid: 0
 
 hub:
+  containerSecurityContext:
+    runAsUser: 0
+    runAsGroup: 0
   config:
     Authenticator:
       admin_users:
@@ -95,36 +114,88 @@ hub:
       # admin_access: true
     JupyterHub:
       authenticator_class: "nativeauthenticator.NativeAuthenticator"
-      allow_named_servers: true
-      # load_groups:
-      #   {
-      #     "brineylab":
-      #       [
-      #         "bryan",
-      #         "jonathan",
-      #         "pragati",
-      #         "terrence",
-      #         "sarah",
-      #         "alina",
-      #         "jing",
-      #       ],
-      #   }
-      # load_roles:
-      #   [
-      #     {
-      #       "name": "brineylab-role",
-      #       "description": "can access other users servers in the brineylab group",
-      #       "scopes": ["access:servers!group=brineylab"],
-      #       "groups": ["brineylab"],
-      #     },
-      #   ]
+      # allow_named_servers: true
+      load_groups:
+        {
+          "brineylab":
+            [
+              "bryan",
+              "jonathan",
+              "pragati",
+              "terrence",
+              "sarah",
+              "alina",
+              "benjamin",
+            ],
+          "external": ["bryan"],
+        }
+      load_roles: [
+          {
+            "name": "brineylab-role",
+            "description": "can access other users servers in the brineylab group",
+            "scopes": ["access:servers!group=brineylab"],
+            "groups": ["brineylab"],
+          },
+          # {
+          #   "name": "external-role",
+          #   "description": "can access other users servers in the external group",
+          #   "scopes": ["access:servers!group=external"],
+          #   "groups": ["brineylab"],
+          # },
+        ]
     NativeAuthenticator:
       enable_signup: true
-      ask_email_on_signup: true
+      # ask_email_on_signup: true
 
   extraConfig:
     00-first-config: |
-      c.KubeSpawner.allow_privilege_escalation
+      c.KubeSpawner.allow_privilege_escalation = True
       c.KubeSpawner.args = ['--allow-root', '--collaborative=True']
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
+
+    # 01-kubevol: |
+    #   from kubernetes import client
+    #   from kubespawner.utils import get_k8s_model
+    #   from kubernetes.client.models import ( V1Volume, V1VolumeMount )
+    #   import json
+    #   def modify_pod_hook(spawner, pod):
+    #       shared_vols = {
+    #           "shared" : [
+    #               "bryan",
+    #               "jonathan",
+    #               "benjamin",
+    #               "terrence",
+    #               "alina",
+    #               "sarah",
+    #               "pragati",
+    #             ],
+    #           "bryan" : [ "bryan" ],
+    #           "jonathan" : [ "jonathan", "bryan"],
+    #           "benjamin" : [ "benjamin", "bryan"],
+    #           "terrence" : [ "terrence", "bryan"],
+    #           "alina" : [ "alina", "bryan"],
+    #           "sarah" : [ "sarah", "bryan"],
+    #           "pragati" : [ "pragati", "bryan"],
+    #         }
+    #       try:
+    #           user=spawner.user.name
+    #           for mnt in shared_vols:
+    #               if user in shared_vols[mnt]:
+    #                 pod.spec.volumes.append(
+    #                   get_k8s_model(V1Volume,
+    #                   { 'name' : mnt,
+    #                     'persistentVolumeClaim': { 'claimName' : 'brineylab-pvc-' + mnt }
+    #                   }
+    #                   )
+    #                 )
+    #                 # Note implicitly only 1 container...
+    #                 pod.spec.containers[0].volume_mounts.append(
+    #                   get_k8s_model(V1VolumeMount,
+    #                       { 'name' : mnt, 'mountPath' : '/home/jovyan/' + mnt } )
+    #                 )
+    #       except Exception as e:
+    #           spawner.log.info("Exception in brineylab-mounts" + str(e))
+    #           pass
+    #       return pod
+    #   c.KubeSpawner.modify_pod_hook = modify_pod_hook
