enable personal volumes

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning"
-      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JuypyterLab extensions"
+      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions"
       kubespawner_override:
         image: brineylab/jupyterhub-deeplearning:v0.1.4
         # extra_resource_limits:
@@ -81,9 +81,9 @@ singleuser:
         persistentVolumeClaim:
           claimName: nfs-avon-nextseq2k
       # shared data
-      - name: nfs-propjoe-shared
-        persistentVolumeClaim:
-          claimName: nfs-propjoe-shared
+      # - name: nfs-propjoe-shared
+      #   persistentVolumeClaim:
+      #     claimName: nfs-propjoe-shared
       # - name: nfs-stringer-shared
       #   persistentVolumeClaim:
       #     claimName: nfs-stringer-shared
@@ -92,8 +92,8 @@ singleuser:
         mountPath: /home/jovyan/sequencing_runs/novaseq
       - name: nfs-avon-nextseq2k
         mountPath: /home/jovyan/sequencing_runs/nextseq
-      - name: nfs-propjoe-shared
-        mountPath: /home/jovyan/shared
+      # - name: nfs-propjoe-shared
+      #   mountPath: /home/jovyan/shared
       # - name: nfs-stringer-shared
       #   mountPath: /home/jovyan/shared
 
@@ -132,20 +132,20 @@ hub:
             ],
           "external": ["bryan"],
         }
-      load_roles: [
-          {
-            "name": "brineylab-role",
-            "description": "can access other users servers in the brineylab group",
-            "scopes": ["access:servers!group=brineylab"],
-            "groups": ["brineylab"],
-          },
-          # {
-          #   "name": "external-role",
-          #   "description": "can access other users servers in the external group",
-          #   "scopes": ["access:servers!group=external"],
-          #   "groups": ["brineylab"],
-          # },
-        ]
+      # load_roles: [
+      # {
+      #   "name": "brineylab-role",
+      #   "description": "can access other users servers in the brineylab group",
+      #   "scopes": ["access:servers!group=brineylab"],
+      #   "groups": ["brineylab"],
+      # },
+      # {
+      #   "name": "external-role",
+      #   "description": "can access other users servers in the external group",
+      #   "scopes": ["access:servers!group=external"],
+      #   "groups": ["brineylab"],
+      # },
+      # ]
     NativeAuthenticator:
       enable_signup: true
       # ask_email_on_signup: true
@@ -153,52 +153,56 @@ hub:
   extraConfig:
     00-first-config: |
       c.KubeSpawner.allow_privilege_escalation = True
-      c.KubeSpawner.args = ['--allow-root', '--collaborative=True']
+      c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
 
-    # 01-kubevol: |
-    #   from kubernetes import client
-    #   from kubespawner.utils import get_k8s_model
-    #   from kubernetes.client.models import ( V1Volume, V1VolumeMount )
-    #   import json
-    #   def modify_pod_hook(spawner, pod):
-    #       shared_vols = {
-    #           "shared" : [
-    #               "bryan",
-    #               "jonathan",
-    #               "benjamin",
-    #               "terrence",
-    #               "alina",
-    #               "sarah",
-    #               "pragati",
-    #             ],
-    #           "bryan" : [ "bryan" ],
-    #           "jonathan" : [ "jonathan", "bryan"],
-    #           "benjamin" : [ "benjamin", "bryan"],
-    #           "terrence" : [ "terrence", "bryan"],
-    #           "alina" : [ "alina", "bryan"],
-    #           "sarah" : [ "sarah", "bryan"],
-    #           "pragati" : [ "pragati", "bryan"],
-    #         }
-    #       try:
-    #           user=spawner.user.name
-    #           for mnt in shared_vols:
-    #               if user in shared_vols[mnt]:
-    #                 pod.spec.volumes.append(
-    #                   get_k8s_model(V1Volume,
-    #                   { 'name' : mnt,
-    #                     'persistentVolumeClaim': { 'claimName' : 'brineylab-pvc-' + mnt }
-    #                   }
-    #                   )
-    #                 )
-    #                 # Note implicitly only 1 container...
-    #                 pod.spec.containers[0].volume_mounts.append(
-    #                   get_k8s_model(V1VolumeMount,
-    #                       { 'name' : mnt, 'mountPath' : '/home/jovyan/' + mnt } )
-    #                 )
-    #       except Exception as e:
-    #           spawner.log.info("Exception in brineylab-mounts" + str(e))
-    #           pass
-    #       return pod
-    #   c.KubeSpawner.modify_pod_hook = modify_pod_hook
+    01-kubevol: |
+      from kubernetes import client
+      from kubespawner.utils import get_k8s_model
+      from kubernetes.client.models import ( V1Volume, V1VolumeMount )
+      import json
+      def modify_pod_hook(spawner, pod):
+          shared_vols = {
+              "shared" : [
+                  "bryan",
+                  "jonathan",
+                  "benjamin",
+                  "terrence",
+                  "sarah",
+                  "sean",
+                  "morgan",
+                  "pragati",
+                ],
+              "bryan" : [ "bryan" ],
+              "jonathan" : [ "jonathan", "bryan"],
+              "benjamin" : [ "benjamin", "bryan"],
+              "terrence" : [ "terrence", "bryan"],
+              "sarah" : [ "sarah", "bryan"],
+              "sean" : [ "sean", "bryan"],
+              "morgan" : [ "morgan", "bryan"],
+              "pragati" : [ "pragati", "bryan"],
+            }
+          try:
+              user=spawner.user.name
+              for mnt in shared_vols:
+                  if user in shared_vols[mnt]:
+                    spawner.log.info("Adding volume for user " + user + " and mount " + mnt)
+                    claim_name = "nfs-propjoe-shared" if mnt == "shared" else "brineylab-personal-pvc-"" + mnt
+                    pod.spec.volumes.append(
+                      get_k8s_model(V1Volume,
+                      { "name" : mnt,
+                        "persistentVolumeClaim": { "claimName" : claim_name }
+                      }
+                      )
+                    )
+                    # Note implicitly only 1 container...
+                    pod.spec.containers[0].volume_mounts.append(
+                      get_k8s_model(V1VolumeMount,
+                          { "name" : mnt, "mountPath" : "/home/jovyan/" + mnt } )
+                    )
+          except Exception as e:
+              spawner.log.info("Exception in brineylab-mounts" + str(e))
+              pass
+          return pod
+      c.KubeSpawner.modify_pod_hook = modify_pod_hook
