--- a/config.yaml
+++ b/config.yaml
@@ -153,7 +153,7 @@ hub:
   extraConfig:
     00-first-config: |
       c.KubeSpawner.allow_privilege_escalation = True
-      c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
+      c.KubeSpawner.args = ["--allow-root", "--collaborative"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
 
