--- a/config.yaml
+++ b/config.yaml
@@ -157,12 +157,8 @@ hub:
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
 
-    01-kubevol: |
-      from kubernetes import client
-      from kubespawner.utils import get_k8s_model
-      from kubernetes.client.models import ( V1Volume, V1VolumeMount )
-      import json
-      def modify_pod_hook(spawner, pod):
+    01-mount-user-volumes: |
+      def user_pvcs(spawner):
           shared_vols = {
               "shared" : [
                   "bryan",
@@ -183,26 +179,75 @@ hub:
               "morgan" : [ "morgan", "bryan"],
               "pragati" : [ "pragati", "bryan"],
             }
+
           try:
               user=spawner.user.name
               for mnt in shared_vols:
                   if user in shared_vols[mnt]:
-                    spawner.log.info("Adding volume for user " + user + " and mount " + mnt)
-                    claim_name = "nfs-propjoe-shared" if mnt == "shared" else "brineylab-personal-pvc-"" + mnt
-                    pod.spec.volumes.append(
-                      get_k8s_model(V1Volume,
-                      { "name" : mnt,
-                        "persistentVolumeClaim": { "claimName" : claim_name }
-                      }
-                      )
-                    )
-                    # Note implicitly only 1 container...
-                    pod.spec.containers[0].volume_mounts.append(
-                      get_k8s_model(V1VolumeMount,
-                          { "name" : mnt, "mountPath" : "/home/jovyan/" + mnt } )
-                    )
+                      spawner.log.info("Adding volume for user " + user + " and mount " + mnt)
+                      claim_name = "nfs-propjoe-shared" if mnt == "shared" else "brineylab-personal-pvc-"" + mnt
+                      spawner.volumes.extend([
+                          {
+                              "name": mnt,
+                              "persistentVolumeClaim": {"claimName": claim_name},
+                          }
+                      ])
+                      spawner.volume_mounts.extend([
+                          {
+                              "mountPath": "/home/jovyan/" + mnt,
+                              "name": mnt,
+                          }
+                      ])
           except Exception as e:
               spawner.log.info("Exception in brineylab-mounts" + str(e))
               pass
-          return pod
-      c.KubeSpawner.modify_pod_hook = modify_pod_hook
+      c.KubeSpawner.pre_spawn_hook = user_pvcs
+
+      # from kubernetes import client
+      # from kubespawner.utils import get_k8s_model
+      # from kubernetes.client.models import ( V1Volume, V1VolumeMount )
+      # import json
+      # def modify_pod_hook(spawner, pod):
+      #     shared_vols = {
+      #         "shared" : [
+      #             "bryan",
+      #             "jonathan",
+      #             "benjamin",
+      #             "terrence",
+      #             "sarah",
+      #             "sean",
+      #             "morgan",
+      #             "pragati",
+      #           ],
+      #         "bryan" : [ "bryan" ],
+      #         "jonathan" : [ "jonathan", "bryan"],
+      #         "benjamin" : [ "benjamin", "bryan"],
+      #         "terrence" : [ "terrence", "bryan"],
+      #         "sarah" : [ "sarah", "bryan"],
+      #         "sean" : [ "sean", "bryan"],
+      #         "morgan" : [ "morgan", "bryan"],
+      #         "pragati" : [ "pragati", "bryan"],
+      #       }
+      #     try:
+      #         user=spawner.user.name
+      #         for mnt in shared_vols:
+      #             if user in shared_vols[mnt]:
+      #               spawner.log.info("Adding volume for user " + user + " and mount " + mnt)
+      #               claim_name = "nfs-propjoe-shared" if mnt == "shared" else "brineylab-personal-pvc-"" + mnt
+      #               pod.spec.volumes.append(
+      #                 get_k8s_model(V1Volume,
+      #                 { "name" : mnt,
+      #                   "persistentVolumeClaim": { "claimName" : claim_name }
+      #                 }
+      #                 )
+      #               )
+      #               # Note implicitly only 1 container...
+      #               pod.spec.containers[0].volume_mounts.append(
+      #                 get_k8s_model(V1VolumeMount,
+      #                     { "name" : mnt, "mountPath" : "/home/jovyan/" + mnt } )
+      #               )
+      #     except Exception as e:
+      #         spawner.log.info("Exception in brineylab-mounts" + str(e))
+      #         pass
+      #     return pod
+      # c.KubeSpawner.modify_pod_hook = modify_pod_hook
