trying to get the default interface to lab not notebook

--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,7 @@ singleuser:
   # grant sudo and set user/group ID
   extraEnv:
     GRANT_SUDO: "yes"
+    JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
   uid: 0
   fsGid: 0
   # default image
