--- a/config.yaml
+++ b/config.yaml
@@ -14,8 +14,8 @@ cull:
   enabled: false
 
 singleuser:
-  cmd: null
-  defaultUrl: "/lab"
+  # cmd: null
+  # defaultUrl: "/lab"
   # networking
   # for some reason, notebook server spawning fails if networkPolicy is set to true
   networkPolicy:
@@ -156,6 +156,7 @@ hub:
       c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
+      c.Spawner.default_url = "/lab"
 
     # 01-mount-user-volumes: |
     #   def user_pvcs(spawner):
