--- a/config.yaml
+++ b/config.yaml
@@ -154,8 +154,8 @@ hub:
   extraConfig:
     00-first-config: |
       c.KubeSpawner.allow_privilege_escalation = True
-      # c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
-      c.KubeSpawner.args = ["--collaborative"]
+      c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
+      # c.KubeSpawner.args = ["--collaborative"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
 
