--- a/config.yaml
+++ b/config.yaml
@@ -66,6 +66,18 @@ singleuser:
                 - "-c"
                 - >
                   mkdir -p ${HOME}/codeserver;
+    - display_name: "vanilla Jupyter datascience notebook"
+      description: "Jupyter notebook server (from Jupyter stacks)"
+      kubespawner_override:
+        image: jupyter/datascience-notebook:hub-4.0.1
+        lifecycle_hooks:
+          postStart:
+            exec:
+              command:
+                - "sh"
+                - "-c"
+                - >
+                  mkdir -p ${HOME}/codeserver;
   # storage
   storage:
     dynamic:
