--- a/config.yaml
+++ b/config.yaml
@@ -170,9 +170,9 @@ hub:
       # c.Spawner.default_url = "/lab"
       # c.KubeSpawner.default_url = "/lab"
       # c.KubeSpawner.working_dir = ".."
-      c.KubeSpawner.args = ["--default_url=/lab" "--allow-root"]
+      c.KubeSpawner.args = ["--allow-root"]
+      # c.KubeSpawner.args = ["--default_url=/lab" "--allow-root"]
       # c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
-      # c.KubeSpawner.args = ["--collaborative"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
 
