--- a/config.yaml
+++ b/config.yaml
@@ -171,8 +171,8 @@ hub:
       # c.KubeSpawner.default_url = "/lab"
       # c.KubeSpawner.working_dir = ".."
       c.KubeSpawner.cmd = "jupyterhub-singleuser"
-      c.KubeSpawner.args = ["--allow-root"]
-      # c.KubeSpawner.args = ["--default_url=/lab" "--allow-root"]
+      # c.KubeSpawner.args = ["--allow-root"]
+      # c.KubeSpawner.args = ["--default-url=/lab" "--allow-root"]
       # c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
